# Kalepi

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  USECASES.md  flake.nix  package.json  pnpm-lock.yaml  pyproject.toml
backend/kalepi/: pyproject.toml
backend/kalepi/src/kalepi/: cli.py  main.py
backend/kalepi/src/kalepi/funder_lens/: __init__.py  fixture.py  models.py  router.py
backend/mira/: pyproject.toml
backend/mira/src/mira/: __init__.py  _generated.py
frontend/app/: index.html  package.json  vite.config.ts
frontend/app/src/: App.tsx  index.css  main.tsx
frontend/app/src/funderLens/: api.ts  charts.tsx  mira.css  types.ts  viz.ts
frontend/app/src/funderLens/components/: ConfidenceBand.tsx
frontend/app/src/funderLens/views/: GrantIndex.tsx  StandingView.tsx
frontend/app/src/funderLens/workspace/: Chrome.tsx  Drawers.tsx  GrantContext.tsx  GrantWorkspace.tsx
frontend/mira/: package.json
frontend/mira/src/: index.ts
