[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalepi"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "mira",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

[project.scripts]
kalepi = "kalepi.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/kalepi"]

